# dice-roller

./: .gitignore  README.md  pyproject.toml
src/dice_roller/: __main__.py  cli.py  rollDice.py
